Upgrade to Java 25 and update dependencies; migrate from json-simple to Jackson for JSON handling; enhance Gradle configuration and build scripts; improve copyright year handling; update README for new Java requirements. updated deprecated url construcotr.