@@ -21,9 +21,9 @@ package services.pihole;
 import domain.pihole.Gravity;
 import domain.pihole.PiHole;
 import domain.pihole.TopAd;
-import org.json.simple.JSONObject;
-import org.json.simple.parser.JSONParser;
-import org.json.simple.parser.ParseException;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.core.JsonProcessingException;
 import services.helpers.HelperService;
 
 import java.io.BufferedReader;
@@ -31,6 +31,7 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.SocketTimeoutException;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -55,30 +56,27 @@ public class PiHoleHandler {
     public PiHole getPiHoleStats() {
 
         String output = getApiResponseAsString("summary", "");
-        JSONParser parser = new JSONParser();
-        JSONObject jsonResult = null;
+        ObjectMapper mapper = new ObjectMapper();
+        JsonNode jsonResult = null;
         if (output != null && output.equals("")) return null;
 
         // Transform Raw result to JSON
 
         try {
-
-            jsonResult = (JSONObject) parser.parse(output);
-
-
-        } catch (ParseException ioe) {
+            jsonResult = mapper.readTree(output);
+        } catch (JsonProcessingException ioe) {
             ioe.printStackTrace();
         }
 
         if (jsonResult != null) {
-            JSONObject gravity_json = (JSONObject) jsonResult.get("gravity_last_updated");
-            JSONObject relative_json = (JSONObject) gravity_json.get("relative");
+            JsonNode gravity_json = jsonResult.get("gravity_last_updated");
+            JsonNode relative_json = gravity_json.get("relative");
 
-            boolean file_exists = (boolean) gravity_json.get("file_exists");
-            Long absolute = (Long) gravity_json.get("absolute");
-            Long days = (Long) relative_json.get("days");
-            Long hours = (Long) relative_json.get("hours");
-            Long minutes = (Long) relative_json.get("minutes");
+            boolean file_exists = gravity_json.get("file_exists").asBoolean();
+            Long absolute = gravity_json.get("absolute").asLong();
+            Long days = relative_json.get("days").asLong();
+            Long hours = relative_json.get("hours").asLong();
+            Long minutes = relative_json.get("minutes").asLong();
 
             Gravity gravity = new Gravity(file_exists, absolute, days, hours, minutes);
             try {
@@ -90,15 +88,15 @@ public class PiHoleHandler {
                 Long unique_domains = Long.parseLong(HelperService.convertJsonToLong(jsonResult.get("unique_domains")));
                 Long queries_forwarded = Long.parseLong(HelperService.convertJsonToLong(jsonResult.get("queries_forwarded")));
                 Long queries_cached = Long.parseLong(HelperService.convertJsonToLong(jsonResult.get("queries_cached")));
-                Long clients_ever_seen = Long.parseLong((String) jsonResult.get("clients_ever_seen"));
-                Long unique_clients = Long.parseLong((String) jsonResult.get("unique_clients"));
+                Long clients_ever_seen = jsonResult.get("clients_ever_seen").asLong();
+                Long unique_clients = jsonResult.get("unique_clients").asLong();
                 Long dns_queries_all_types = Long.parseLong(HelperService.convertJsonToLong(jsonResult.get("dns_queries_all_types")));
                 Long reply_NODATA = Long.parseLong(HelperService.convertJsonToLong(jsonResult.get("reply_NODATA")));
                 Long reply_NXDOMAIN = Long.parseLong(HelperService.convertJsonToLong(jsonResult.get("reply_NXDOMAIN")));
                 Long reply_CNAME = Long.parseLong(HelperService.convertJsonToLong(jsonResult.get("reply_CNAME")));
                 Long reply_IP = Long.parseLong(HelperService.convertJsonToLong(jsonResult.get("reply_IP")));
-                Long privacy_level = Long.parseLong((String) jsonResult.get("privacy_level"));
-                String status = (String) jsonResult.get("status");
+                Long privacy_level = jsonResult.get("privacy_level").asLong();
+                String status = jsonResult.get("status").asText();
 
 
                 return new PiHole(domains_being_blocked, dns_queries_today, ads_blocked_today, ads_percentage_today, unique_domains, queries_forwarded, queries_cached, clients_ever_seen, unique_clients, dns_queries_all_types, reply_NODATA, reply_NXDOMAIN, reply_CNAME, reply_IP, privacy_level, status, gravity);
@@ -127,14 +125,14 @@ public class PiHoleHandler {
 
         // Transform Raw result to JSON
 
-        JSONParser parser = new JSONParser();
-        JSONObject jsonResult = null;
+        ObjectMapper mapper = new ObjectMapper();
+        JsonNode jsonResult = null;
         try {
-            jsonResult = (JSONObject) parser.parse(output);
-        } catch (ParseException e) {
+            jsonResult = mapper.readTree(output);
+        } catch (JsonProcessingException e) {
             e.printStackTrace();
         }
-        if (jsonResult != null) return jsonResult.get("version").toString();
+        if (jsonResult != null) return jsonResult.get("version").asText();
         return "";
     }
 
@@ -147,19 +145,20 @@ public class PiHoleHandler {
 
             // Transform Raw result to JSON
 
-            JSONParser parser = new JSONParser();
+            ObjectMapper mapper = new ObjectMapper();
             try {
-
-                JSONObject jsonResult = (JSONObject) parser.parse(output);
-                JSONObject topADS = (JSONObject) jsonResult.get("top_ads");
+                JsonNode jsonResult = mapper.readTree(output);
+                JsonNode topADS = jsonResult.get("top_ads");
                 List<TopAd> list = new ArrayList<>();
 
-                topADS.forEach((key, value) -> list.add(new TopAd((String) key, (Long) value)));
+                topADS.fields().forEachRemaining(entry -> 
+                    list.add(new TopAd(entry.getKey(), entry.getValue().asLong()))
+                );
 
                 list.sort((s1, s2) -> Long.compare(s2.getNumberBlocked(), s1.getNumberBlocked()));
 
                 return list;
-            } catch (ParseException e) {
+            } catch (JsonProcessingException e) {
                 e.printStackTrace();
                 return null;
             }
@@ -209,7 +208,7 @@ public class PiHoleHandler {
         HttpURLConnection conn=null;
         if (!IPAddress.isEmpty()) {
             try {
-                URL url = new URL("http://" + IPAddress + ":" + Port + "/admin/api.php" + fullParam + fullParamVal + fullAuth);
+                URL url = URI.create("http://" + IPAddress + ":" + Port + "/admin/api.php" + fullParam + fullParamVal + fullAuth).toURL();
 
                 conn = (HttpURLConnection) url.openConnection();
 
